--- a/pipelines/etcd.yml
+++ b/pipelines/etcd.yml
@@ -673,6 +673,8 @@ jobs:
       passed:
       - add-cf-cats-to-dns
       trigger: true
+    - get: vars-files
+      resource: infrastructure-ci-bbl-states
     - get: vars-store
       resource: infrastructure-ci-bbl-states
     - get: deployment-lock
