Fix bbl-latest unit-tests
- trigger tests on bbl-latest changes

[#144556081]

Signed-off-by: Nick Mahoney <nmahoney@pivotal.io>

--- a/pipelines/bbl-latest.yml
+++ b/pipelines/bbl-latest.yml
@@ -35,6 +35,7 @@ jobs:
   plan:
   - aggregate:
     - get: bbl-latest-app
+      trigger: true
     - get: ci
       resource: infrastructure-ci
   - task: test
