Set GOPACKAGENAME correctly
[#144556081]

--- a/apps/bbl-latest/manifest.yml
+++ b/apps/bbl-latest/manifest.yml
@@ -8,4 +8,4 @@ applications:
   path: .
   env:
     GOVERSION: go1.8
-    GOPACKAGENAME: main
+    GOPACKAGENAME: github.com/cloudfoundry/infrastructure-ci/apps/bbl-latest
