--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -355,11 +355,12 @@ jobs:
     - get: bosh-bootloader
       resource: bosh-bootloader-develop
       passed: [setup-aws-terraform-infrastructure]
-      trigger: true
     - get: ci
       resource: infrastructure-ci
-    - get: bbl-states-repo
+    - get: bbl-state
       resource: infrastructure-ci-bbl-states
+      passed: [setup-aws-terraform-infrastructure]
+      trigger: true
     - get: cf-deployment-concourse-tasks
     - get: cf-deployment
     - get: ops-files
