--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -335,6 +335,9 @@ jobs:
       BBL_AWS_REGION: {{aws_region}}
       BBL_STATE_DIR: bbl-aws-terraform
       BBL_NAME: bbl-aws-terraform
+      BBL_LB_DOMAIN: bbl-aws-terraform.infrastructure.cf-app.com
+      BBL_LB_CERT: {{bbl_downstream_cf_ssl_cert}}
+      BBL_LB_KEY: {{bbl_downstream_cf_ssl_private_key}}
     on_failure:
       put: slack-alert
       params:
