Make non-public jobs public
[#137573715]

Signed-off-by: Nick Mahoney <nmahoney@pivotal.io>

--- a/pipelines/consul.yml
+++ b/pipelines/consul.yml
@@ -264,6 +264,7 @@ jobs:
         rebase: true
 
 - name: delete-consats-linux-deployments
+  public: true
   serial_groups: [consats-linux]
   plan:
   - aggregate:
@@ -486,6 +487,7 @@ jobs:
         rebase: true
 
 - name: delete-consats-windows-deployments
+  public: true
   serial_groups: [consats-windows]
   plan:
   - aggregate:
