--- a/pipelines/etcd.yml
+++ b/pipelines/etcd.yml
@@ -275,7 +275,6 @@ jobs:
         text: {{slack_failure_text}}
 
 - name: setup-eats-infrastructure
-  serial_groups: [bbl-states]
   public: true
   plan:
   - aggregate:
@@ -295,24 +294,29 @@ jobs:
     timeout: 3h
     params:
       claim: etcd-eats
-  - task: bbl-up
-    file: ci/scripts/common/bbl-up/task.yml
-    params:
-      BBL_GCP_PROJECT_ID: {{gcp_project_id}}
-      BBL_GCP_REGION: {{gcp_region}}
-      BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
-      BBL_GCP_ZONE: {{gcp_zone}}
-      BBL_NAME: eats
-      BBL_STATE_DIR: eats
+  - do:
+    - task: bbl-up
+      file: ci/scripts/common/bbl-up/task.yml
+      params:
+        BBL_GCP_PROJECT_ID: {{gcp_project_id}}
+        BBL_GCP_REGION: {{gcp_region}}
+        BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
+        BBL_GCP_ZONE: {{gcp_zone}}
+        BBL_NAME: eats
+        BBL_STATE_DIR: eats
+      on_failure:
+        put: slack-alert
+        params:
+          text: {{slack_failure_text}}
+      ensure:
+        put: infrastructure-ci-bbl-states
+        params:
+          rebase: true
+          repository: bbl-states-repo-out
     on_failure:
-      put: slack-alert
+      put: deployment-lock
       params:
-        text: {{slack_failure_text}}
-    ensure:
-      put: infrastructure-ci-bbl-states
-      params:
-        rebase: true
-        repository: bbl-states-repo-out
+        release: deployment-lock
 
 - name: delete-eats-deployments
   public: true
@@ -338,7 +342,6 @@ jobs:
         text: {{slack_failure_text}}
 
 - name: teardown-eats-infrastructure-early
-  serial_groups: [bbl-states]
   public: true
   plan:
   - aggregate:
@@ -446,7 +449,6 @@ jobs:
         [$BUILD_PIPELINE_NAME/$BUILD_JOB_NAME] passed.
 
 - name: teardown-eats-infrastructure
-  serial_groups: [bbl-states]
   public: true
   plan:
   - aggregate:
@@ -510,7 +512,6 @@ jobs:
         text: {{slack_failure_text}}
 
 - name: setup-cf-cats-infrastructure
-  serial_groups: [bbl-states]
   public: true
   plan:
   - aggregate:
@@ -583,7 +584,6 @@ jobs:
         text: {{slack_failure_text}}
 
 - name: teardown-cf-cats-infrastructure-early
-  serial_groups: [bbl-states]
   public: true
   plan:
   - aggregate:
@@ -782,7 +782,6 @@ jobs:
         text: {{slack_failure_text}}
 
 - name: teardown-cf-cats-infrastructure
-  serial_groups: [bbl-states]
   public: true
   plan:
   - aggregate:
@@ -828,7 +827,6 @@ jobs:
       release: deployment-lock
 
 - name: setup-cf-tls-upgrade-infrastructure
-  serial_groups: [bbl-states]
   public: true
   plan:
   - aggregate:
@@ -901,7 +899,6 @@ jobs:
         text: {{slack_failure_text}}
 
 - name: teardown-cf-tls-upgrade-infrastructure-early
-  serial_groups: [bbl-states]
   public: true
   plan:
   - aggregate:
@@ -1089,7 +1086,6 @@ jobs:
         text: {{slack_failure_text}}
 
 - name: teardown-cf-tls-upgrade-infrastructure
-  serial_groups: [bbl-states]
   public: true
   plan:
   - aggregate:
